started q2 on final project

--- a/MASM17/Lab2_tork.ipynb
+++ b/MASM17/Lab2_tork.ipynb
@@ -85,6 +85,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "6c8e10a5-66a8-4ef1-a940-77bb6da0df63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getARMA(data, A=0, C=0):\n",
+    "    A_free=A\n",
+    "    C_free=C\n",
+    "    model = modelling.PEM(data, A=A, C=C)\n",
+    "    if isinstance(A, int):\n",
+    "        A_free = [1]*(A+1)\n",
+    "    if isinstance(C, int):\n",
+    "        C_free = [1]*(C+1)\n",
+    "        print(C_free)\n",
+    "    model.set_free_params(A_free=A_free, C_free=C_free)\n",
+    "    model_fitted = model.fit(method='LS', bh=False)\n",
+    "    model_fitted.summary()\n",
+    "    return model_fitted\n",
+    "\n",
+    "def checkNormal(data, remove=False, title=None):\n",
+    "    if remove:\n",
+    "        data = data[remove:]\n",
+    "    tests.check_if_normal(data)\n",
+    "    stats.probplot(data, dist=\"norm\", plot=pylab)\n",
+    "    # variable = [ i for i, j in locals().items() if j == data][0]\n",
+    "    if title:\n",
+    "        plt.title(title)\n",
+    "    pylab.show()\n",
+    "    \n",
+    "    \n",
+    "def analyzeARMA(x, A=0, C=0, noLags=50, titleStr=None, return_val=False, normal_test=True):\n",
+    "    model = getARMA(x, A=A, C=C)\n",
+    "    if isinstance(A, int): len_A = A\n",
+    "    else: len_A = len(A)\n",
+    "    if isinstance(C, int): len_C = C\n",
+    "    else: len_C = len(C)\n",
+    "    remove=max(len_A, len_C)\n",
+    "    res = model.resid\n",
+    "    acf_est, pacf_est = analysis.plotACFnPACF(res,noLags=noLags,titleStr=titleStr, return_val=True)\n",
+    "    tests.whiteness_test(res)\n",
+    "    if normal_test:\n",
+    "        checkNormal(acf_est, remove=remove, title='ACF')\n",
+    "        checkNormal(pacf_est, remove=remove, title='PACF')\n",
+    "    if return_val:\n",
+    "        return model, acf_est, pacf_est"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "a60f204b-be45-4a06-8f6d-75f681ed5f73",
    "metadata": {},
