progress on final project

--- a/MASM17/Lab2_tork.ipynb
+++ b/MASM17/Lab2_tork.ipynb
@@ -37,55 +37,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fe07a62c-7ba1-4afc-871c-a5fd94c47b45",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getARMA(data, A=0, C=0):\n",
-    "    A_free=A\n",
-    "    C_free=C\n",
-    "    model = modelling.PEM(data, A=A, C=C)\n",
-    "    if isinstance(A, int):\n",
-    "        A_free = [1]*(A+1)\n",
-    "    if isinstance(C, int):\n",
-    "        C_free = [1]*(C+1)\n",
-    "        print(C_free)\n",
-    "    model.set_free_params(A_free=A_free, C_free=C_free)\n",
-    "    model_fitted = model.fit(method='LS', bh=False)\n",
-    "    model_fitted.summary()\n",
-    "    return model_fitted\n",
-    "\n",
-    "def checkNormal(data, remove=False, title=None):\n",
-    "    if remove:\n",
-    "        data = data[remove:]\n",
-    "    tests.check_if_normal(data)\n",
-    "    stats.probplot(data, dist=\"norm\", plot=pylab)\n",
-    "    # variable = [ i for i, j in locals().items() if j == data][0]\n",
-    "    if title:\n",
-    "        plt.title(title)\n",
-    "    pylab.show()\n",
-    "    \n",
-    "    \n",
-    "def analyzeARMA(x, A=0, C=0, noLags=50, titleStr=None, return_val=False, normal_test=True):\n",
-    "    model = getARMA(x, A=A, C=C)\n",
-    "    if isinstance(A, int): len_A = A\n",
-    "    else: len_A = len(A)\n",
-    "    if isinstance(C, int): len_C = C\n",
-    "    else: len_C = len(C)\n",
-    "    remove=max(len_A, len_C)\n",
-    "    res = model.resid\n",
-    "    acf_est, pacf_est = analysis.plotACFnPACF(res,noLags=noLags,titleStr=titleStr, return_val=True)\n",
-    "    tests.whiteness_test(res)\n",
-    "    if normal_test:\n",
-    "        checkNormal(acf_est, remove=remove, title='ACF')\n",
-    "        checkNormal(pacf_est, remove=remove, title='PACF')\n",
-    "    if return_val:\n",
-    "        return model, acf_est, pacf_est"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "6c8e10a5-66a8-4ef1-a940-77bb6da0df63",
    "metadata": {},
    "outputs": [],
@@ -168,7 +119,13 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "66c3151f-2432-4940-9a31-bb4b78e090e3",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -190,7 +147,13 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "5bccc824-c7d4-4d1d-b4f5-05ae7f4fd54a",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -285,7 +248,13 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "4fcf9d70-05ed-428e-9fed-8ab5d8f26977",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -392,7 +361,9 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "50da957a-3e23-40d8-ade8-d48322f2ff9e",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -428,7 +399,9 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "b0fc6853-a34f-4c4c-8eab-4259e821f79f",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -497,7 +470,13 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "837aff76-0a3a-4bf4-bda8-9835003099a7",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -519,7 +498,13 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "7b967d1b-5313-4e03-b419-67606da541fa",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -624,7 +609,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "8333e6ae-37ae-4a16-b096-427ed022ef63",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
